force-app/main/default/objects/Check_In__c/Check_In__c.object-meta.xml
<CustomObject>
    <description>Represents an instance of a beer being checked-in on Untappd.</description>
    <label>Check-In</label>
    <nameField>
        <displayFormat>CI-{0}</displayFormat>
        <label>Check-In Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check-Ins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>