force-app/main/default/objects/Check_In__c/fields/Beer__c.field-meta.xml
<CustomField>
    <fullName>Beer__c</fullName>
    <description>Beer that was checked in.</description>
    <label>Beer</label>
    <referenceTo>Beer__c</referenceTo>
    <relationshipName>Check_Ins</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>