force-app/main/default/objects/Check_In__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Text-based review given to the beer by the reviewer.</description>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>