force-app/main/default/objects/Check_In__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date and time the beer was checked in.</description>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>