force-app/main/default/objects/Check_In__c/fields/Number_of_Comments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Comments__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of comments the check-in received.</description>
    <label>Number of Comments</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>