force-app/main/default/objects/Check_In__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Numeric score given to the beer by the reviewer.</description>
    <label>Rating</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>