force-app/main/default/objects/Check_In__c/fields/Untappd_Id__c.field-meta.xml
<CustomField>
    <fullName>Untappd_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique identifier used in the Untappd API.</description>
    <externalId>true</externalId>
    <label>Untappd Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>