force-app/main/default/objects/Check_In__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Beer__c</columns>
    <columns>Rating__c</columns>
    <columns>Comment__c</columns>
    <columns>Date__c</columns>
    <columns>Number_of_Toasts__c</columns>
    <columns>Number_of_Comments__c</columns>
    <columns>Untappd_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>